--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -10,3 +10,6 @@ redis_exporter_server_bind: 0.0.0.0
 redis_exporter_server_password: false
 
 redis_exporter_version: v1.3.5
+
+redis_server_port: 6379
+redis_server_password: ''
