--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -13,3 +13,4 @@ redis_exporter_version: v1.3.5
 
 redis_server_port: 6379
 redis_server_password: ''
+redis_server_addr: "redis://{{ PublicIp }}:{{ redis_server_port }}"
