--- a/README.yaml
+++ b/README.yaml
@@ -61,12 +61,16 @@ usage: |-
 # Variables use in the project
 variables: |-
   ```yaml
-    redis_exporter_user: redis_exporter
-    redis_exporter_group: redis_exporter
-    mount_path: /data
     redis_exporter_server_port: 9121
+    redis_exporter_server_bind: 0.0.0.0
+
     redis_exporter_server_password: false
-    redis_exporter_version: latest
+
+    redis_exporter_version: v1.3.5
+
+    redis_server_port: 6379
+    redis_server_password: ''
+    redis_server_addr: "redis://{{ PublicIp }}:{{ redis_server_port }}"
   ```
 
 # How to install project
