--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -20,6 +20,7 @@
   service:
     name: redis_exporter
     state: restarted
+    enabled: true
   changed_when: false
 
 - name: wait for redis exporter to become ready
